@@ -26,37 +26,6 @@ var CloudFunc = {
 };
 
 
-/* STRINGS */
-
-/**
- * function check is strings are equal
- * @param pStr1
- * @param pStr2
- */
-CloudFunc.strCmp                 = function (pStr1, pStr2){
-    return  this.isContainStr(pStr1, pStr2) &&
-            pStr1.length == pStr2.length;
-};
-
-/**
- * function returns is pStr1 contains pStr2
- * @param pStr1
- * @param pStr2
- */
-CloudFunc.isContainStr           = function(pStr1, pStr2){
-    return  pStr1                &&
-            pStr2                && 
-            pStr1.indexOf(pStr2) >= 0;
-};
-
-/**
- * function remove substring from string
- * @param pStr
- * @param pSubStr
- */
-CloudFunc.removeStr              = function(pStr, pSubStr){
-    return pStr.replace(pSubStr,'');
-};
 /*
  * Функция убирает последний слеш,
  * если он - последний символ строки
