@@ -37,6 +37,8 @@ new module.
 
 * Fixed bug with context menu hiding (on Esc). Keys was unbinded.
 
+* Added ability to disable web sockets.
+
 
 2012.10.01, Version 0.1.7
 
